<resources>
    <string name="app_name">CapstoneProject</string>
    <string name="welcome_to_rhythmquest">Welcome to RhythmQuest</string>
    <string name="press_note_part_1">  1: How to press the note part 1  </string>
    <string name="press_note_part_2">  2: How to press the note part 2  </string>
    <string name="note_combo">  3: Evaluation and Combo  </string>
    <string name="unison_note">  4: Type of note: Unison Note  </string>
    <string name="type_of_note_hold">  5: Type of note: Hold Note  </string>
    <string name="entire_song">  6: Practice Entire Song  </string>
    <string name="todo">TODO</string>
</resources>
